# log-rotate

./: CMakeLists.txt  create_files.sh  test.conf
src/: cLogRotate.cpp  cLogRotate.h  main.cpp
